--- a/source/index.html
+++ b/source/index.html
@@ -63,89 +63,79 @@
     <main class="main">
       <h1 class="visually-hidden">Интернет магазин кофейных напитков.</h1>
       <div class="main__container">
-
-
-
         <section class="swiper">
           <h2 class="visually-hidden">Новинка.</h2>
           <div class="swiper-wrapper">
-
             <div class="swiper-slide swiper-slide--flat-white">
-              <div class="swiper-slide__image-wrapper">
+              <div class="swiper__image-wrapper">
                 <picture>
                   <source media="(min-width: 1440px)" type="image/webp" srcset="./img/new/flat-white-desktop.webp 1x, ./img/new/flat-white-desktop@2x.webp 2x">
                   <source media="(min-width: 768px)" type="image/webp" srcset="./img/new/flat-white-tablet.webp 1x, ./img/new/flat-white-tablet@2x.webp 2x">
                   <source type="image/webp" srcset="./img/new/flat-white-img.webp 1x, ./img/new/flat-white-img@2x.webp 2x">
                   <source media="(min-width: 1440px)" type="image/png" srcset="./img/new/flat-white-desktop.png 1x, ./img/new/flat-white-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" type="image/png" srcset="./img/new/flat-white-tablet.png 1x, ./img/new/flat-white-tablet@2x.png 2x">
-                  <img class="swiper-slide__img"  width="280" height="280" src="./img/new/flat-white-img.png" srcset="./img/new/flat-white-img@2x.png 2x" alt="flat white.">
+                  <img class="swiper__image"  width="280" height="280" src="./img/new/flat-white-img.png" srcset="./img/new/flat-white-img@2x.png 2x" alt="flat white.">
                 </picture>
               </div>
-              <div class="swiper-slide__info">
-                <h2 class="swiper-slide__badge badge">Новинка!</h2>
-                <p class="swiper-slide__title">Декаф Флэт Уайт</p>
-                <p class="swiper-slide__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
-                <div class="swiper-slide__price">
-                  <del class="swiper-slide__old-price">295₽</del>
-                  <span class="swiper-slide__new-price">225₽</span>
-                  <button class="swiper-slide__button button button-element" type="button">Заказать</button>
+              <div class="swiper__info">
+                <h2 class="swiper__badge badge">Новинка!</h2>
+                <p class="swiper__title">Декаф Флэт Уайт</p>
+                <p class="swiper__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+                <div class="swiper__price">
+                  <del class="swiper__old-price">295₽</del>
+                  <span class="swiper__new-price">225₽</span>
+                  <button class="swiper__button button button-element" type="button">Заказать</button>
                 </div>
               </div>
             </div>
-
             <div class="swiper-slide swiper-slide--lavender">
-              <div class="swiper-slide__image-wrapper">
+              <div class="swiper__image-wrapper">
                 <picture>
                   <source media="(min-width: 1440px)" type="image/webp" srcset="./img/new/lavender-img-desktop.webp 1x, ./img/new/lavender-img-desktop@2x.webp 2x">
                   <source media="(min-width: 768px)" type="image/webp" srcset="./img/new/lavender-img-tablet.webp 1x, ./img/new/lavender-img-tablet@2x.webp 2x">
                   <source type="image/webp" srcset="./img/new/lavender-img.webp 1x, ./img/new/lavender-img@2x.webp 2x">
                   <source media="(min-width: 1440px)" type="image/png" srcset="./img/new/lavender-img-desktop.png 1x, ./img/new/lavender-img-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" type="image/png" srcset="./img/new/lavender-img-tablet.png 1x, ./img/new/lavender-img-tablet@2x.png 2x">
-                  <img class="swiper-slide__img"  width="280" height="280" src="./img/new/lavender-img.png" srcset="./img/new/lavender-img@2x.png 2x" alt="lavender.">
+                  <img class="swiper__image"  width="280" height="280" src="./img/new/lavender-img.png" srcset="./img/new/lavender-img@2x.png 2x" alt="lavender.">
                 </picture>
               </div>
-              <div class="swiper-slide__info">
-                <h2 class="swiper-slide__badge badge">Новинка!</h2>
-                <p class="swiper-slide__title">Лавандовый Латте</p>
-                <p class="swiper-slide__text">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
-                <div class="swiper-slide__price">
-                  <del class="swiper-slide__old-price">285₽</del>
-                  <span class="swiper-slide__new-price">265₽</span>
-                  <button class="swiper-slide__button button button-element" type="button">Заказать</button>
+              <div class="swiper__info">
+                <h2 class="swiper__badge badge">Новинка!</h2>
+                <p class="swiper__title">Лавандовый Латте</p>
+                <p class="swiper__text">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
+                <div class="swiper__price">
+                  <del class="swiper__old-price">285₽</del>
+                  <span class="swiper__new-price">265₽</span>
+                  <button class="swiper__button button button-element" type="button">Заказать</button>
                 </div>
               </div>
             </div>
-
             <div class="swiper-slide swiper-slide--espresso">
-              <div class="swiper-slide__image-wrapper">
+              <div class="swiper__image-wrapper">
                 <picture>
                   <source media="(min-width: 1440px)" type="image/webp" srcset="./img/new/espresso-desktop.webp 1x, ./img/new/espresso-desktop@2x.webp 2x">
                   <source media="(min-width: 768px)" type="image/webp" srcset="./img/new/espresso-tablet.webp 1x, ./img/new/espresso-tablet@2x.webp 2x">
                   <source type="image/webp" srcset="./img/new/espresso.webp 1x, ./img/new/espresso@2x.webp 2x">
                   <source media="(min-width: 1440px)" type="image/png" srcset="./img/new/espresso-desktop.png 1x, ./img/new/espresso-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" type="image/png" srcset="./img/new/espresso-tablet.png 1x, ./img/new/espresso-tablet@2x.png 2x">
-                  <img class="swiper-slide__img"  width="280" height="280" src="./img/new/espresso.png" srcset="./img/new/espresso@2x.png 2x" alt="espresso.">
+                  <img class="swiper__image"  width="280" height="280" src="./img/new/espresso.png" srcset="./img/new/espresso@2x.png 2x" alt="espresso.">
                 </picture>
               </div>
-              <div class="swiper-slide__info">
-                <h2 class="swiper-slide__badge badge">Новинка!</h2>
-                <p class="swiper-slide__title">Тройной Эспрессо</p>
-                <p class="swiper-slide__text">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из Колумбии покажет вам, что такое настоящая бодрость</p>
-                <div class="swiper-slide__price">
-                  <del class="swiper-slide__old-price">395₽</del>
-                  <span class="swiper-slide__new-price">375₽</span>
-                  <button class="swiper-slide__button button button-element" type="button">Заказать</button>
+              <div class="swiper__info">
+                <h2 class="swiper__badge badge">Новинка!</h2>
+                <p class="swiper__title">Тройной Эспрессо</p>
+                <p class="swiper__text">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из Колумбии покажет вам, что такое настоящая бодрость</p>
+                <div class="swiper__price">
+                  <del class="swiper__old-price">395₽</del>
+                  <span class="swiper__new-price">375₽</span>
+                  <button class="swiper__button button button-element" type="button">Заказать</button>
                 </div>
               </div>
             </div>
-
           </div>
           <div class="swiper-pagination"></div>
           <div class="swiper-button-prev swiper-button"></div>
           <div class="swiper-button-next swiper-button"></div>
-
-
-
         </section>
         <section class="advantages">
           <h2 class="advantages__badge badge">Преимущества</h2>
