--- a/source/index.html
+++ b/source/index.html
@@ -64,7 +64,7 @@
       <h1 class="visually-hidden">Интернет магазин кофейных напитков.</h1>
       <div class="main__container">
         <section class="swiper">
-          <h2 class="visually-hidden">Новинка.</h2>
+          <h2 class="visually-hidden">Новинки.</h2>
           <div class="swiper-wrapper">
             <div class="swiper-slide swiper-slide--flat-white">
               <div class="swiper-slide__wrapper">
@@ -78,7 +78,7 @@
                 </picture>
                 <div class="swiper__info">
                   <span class="swiper__badge badge">Новинка!</span>
-                  <h2 class="swiper__title">Декаф Флэт Уайт</h2>
+                  <h3 class="swiper__title">Декаф Флэт Уайт</h3>
                   <p class="swiper__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
                   <div class="swiper__price">
                     <del class="swiper__old-price">295₽</del>
@@ -99,8 +99,8 @@
                   <img class="swiper__image"  width="280" height="280" src="./img/new/lavender-img.png" srcset="./img/new/lavender-img@2x.png 2x" alt="lavender.">
                 </picture>
                 <div class="swiper__info">
-                  <h2 class="swiper__badge badge">Новинка!</h2>
-                  <p class="swiper__title">Лавандовый Латте</p>
+                  <span class="swiper__badge badge">Новинка!</span>
+                  <h3 class="swiper__title">Лавандовый Латте</h3>
                   <p class="swiper__text">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
                   <div class="swiper__price">
                     <del class="swiper__old-price">285₽</del>
@@ -121,8 +121,8 @@
                   <img class="swiper__image"  width="280" height="280" src="./img/new/espresso.png" srcset="./img/new/espresso@2x.png 2x" alt="espresso.">
                 </picture>
                 <div class="swiper__info">
-                  <h2 class="swiper__badge badge">Новинка!</h2>
-                  <p class="swiper__title">Тройной Эспрессо</p>
+                  <span class="swiper__badge badge">Новинка!</span>
+                  <h3 class="swiper__title">Тройной Эспрессо</h3>
                   <p class="swiper__text">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из Колумбии покажет вам, что такое настоящая бодрость</p>
                   <div class="swiper__price">
                     <del class="swiper__old-price">395₽</del>
