--- a/source/index.html
+++ b/source/index.html
@@ -17,11 +17,13 @@
     <header class="header">
       <div class="header__logo-wrapper">
         <a class="header__logo logo" href="#">
-          <span class="header__logo-text logo__text">d</span>
+          <span class="header__logo-short-text logo__text">d</span>
+          <span class="header__logo-full-text logo__text">drink</span>
           <svg width="32" height="36" role="img" aria-hidden="true" focusable="false" aria-label="Логотип.">
             <use xlink:href="../img/sprite.svg#logo"></use>
           </svg>
-          <span class="header__logo-text logo__text">g</span>
+          <span class="header__logo-short-text logo__text">g</span>
+          <span class="header__logo-full-text logo__text">go</span>
           <span class="visually-hidden">Логотип компании.</span>
         </a>
         <span class="header__text">Интернет-магазин кофейных напитков</span>
@@ -79,7 +81,7 @@
                 <div class="swiper__info">
                   <span class="swiper__badge badge">Новинка!</span>
                   <h3 class="swiper__title">Декаф Флэт Уайт</h3>
-                  <p class="swiper__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+                  <p class="swiper__text">Свежесваренный кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком — то, что нужно <br>для расслабления после тяжёлого рабочего дня</p>
                   <div class="swiper__price">
                     <del class="swiper__old-price">295₽</del>
                     <span class="swiper__new-price">225₽</span>
@@ -156,7 +158,7 @@
               </svg>
               <div class="advantages__text-wrapper">
                 <h3 class="advantages__item-name">Удобство</h3>
-                <p class="advantages__text">Легко помещается и в карман, и в маленькую сумочку</p>
+                <p class="advantages__text">Легко помещается и в карман, <br>и в маленькую сумочку</p>
               </div>
             </li>
             <li class="advantages__item">
@@ -174,7 +176,7 @@
               </svg>
               <div class="advantages__text-wrapper">
                 <h3 class="advantages__item-name">Экологичность</h3>
-                <p class="advantages__text">Вся упаковка сделана из перерабатываемых материалову</p>
+                <p class="advantages__text">Вся упаковка сделана <br>из перерабатываемых материалову</p>
               </div>
             </li>
           </ul>
@@ -280,7 +282,7 @@
                   </div>
                   <h3 class="products__title">Декаф Флэт Уайт</h3>
                 </a>
-                <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="products__text">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
                   <button class="products__button button button-element" type="button">
@@ -301,7 +303,7 @@
                   </div>
                   <h3 class="products__title">Декаф Флэт Уайт</h3>
                 </a>
-                <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="products__text">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
                   <button class="products__button button button-element" type="button">
@@ -322,7 +324,7 @@
                   </div>
                   <h3 class="products__title">Декаф Флэт Уайт</h3>
                 </a>
-                <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="products__text">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
                   <button class="products__button button button-element" type="button">
@@ -343,7 +345,7 @@
                   </div>
                   <h3 class="products__title">Декаф Флэт Уайт</h3>
                 </a>
-                <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="products__text">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
                   <button class="products__button button button-element" type="button">
@@ -364,7 +366,7 @@
                   </div>
                   <h3 class="products__title">Декаф Флэт Уайт</h3>
                 </a>
-                <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="products__text">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
                   <button class="products__button button button-element" type="button">
@@ -385,7 +387,7 @@
                   </div>
                   <h3 class="products__title">Декаф Флэт Уайт</h3>
                 </a>
-                <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="products__text">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
                   <button class="products__button button button-element" type="button">
@@ -551,6 +553,7 @@
   </div>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/range-slider-input@2/dist/rangeslider.umd.min.js"></script>
   <script src="./js/swiper.js" type="module"></script>
   <script src="./js/script.js" type="module"></script>
   <script src="./js/leaflet.js" type="module"></script>
