fixes after code review

--- a/source/index.html
+++ b/source/index.html
@@ -405,7 +405,7 @@
                 </li>
               </ul>
             </div>
-            <div class="products__pagination pagination">
+            <div class="catalog__pagination pagination">
               <ul class="pagination__list">
                 <li class="pagination__item">
                   <a class="pagination__link pagination__link--utter" href="#">
@@ -443,109 +443,101 @@
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
-        <div class="footer__navigation-wrapper">
-          <div class="footer__navigation">
-            <div class="footer__logo-wrapper">
-              <a class="footer__logo logo" href="#">
-                <span class="footer__logo-text--short logo__text">d</span>
-                <span class="footer__logo-text--full logo__text">drink</span>
-                <svg width="32" height="36" role="img" aria-hidden="true" focusable="false" aria-label="Логотип.">
-                  <use xlink:href="../img/sprite.svg#logo"></use>
-                </svg>
-                <span class="footer__logo-text--short logo__text">g</span>
-                <span class="footer__logo-text--full logo__text">go</span>
-                <span class="visually-hidden">Логотип компании.</span>
-              </a>
-              <span class="footer__text">Интернет-магазин кофейных напитков</span>
-            </div>
-            <ul class="footer__socials socials">
-              <li class="socials__item">
-                <a class="socials__link" href="#">
-                  <svg width="20" height="20" role="img" aria-hidden="true" focusable="false" aria-label="Иконка вк.">
-                    <use xlink:href="../img/sprite.svg#vk"></use>
-                  </svg>
-                  <span class="visually-hidden">VK.</span>
-                </a>
-              </li>
-              <li class="socials__item">
-                <a class="socials__link" href="#">
-                  <svg width="22" height="22" role="img" aria-hidden="true" focusable="false" aria-label="Иконка пинтерест.">
-                    <use xlink:href="../img/sprite.svg#pinterest"></use>
-                  </svg>
-                  <span class="visually-hidden">Pinterest.</span>
-                </a>
-              </li>
-              <li class="socials__item">
-                <a class="socials__link" href="#">
-                  <svg width="20" height="20" role="img" aria-hidden="true" focusable="false" aria-label="Иконка одноклассники.">
-                    <use xlink:href="../img/sprite.svg#odnoklassniki"></use>
-                  </svg>
-                  <span class="visually-hidden">Одноклассники.</span>
-                </a>
-              </li>
-            </ul>
+        <div class="footer__navigation">
+          <div class="footer__logo-wrapper">
+            <a class="footer__logo logo" href="#">
+              <span class="logo__text--short logo__text">d</span>
+              <span class="logo__text--full logo__text">drink</span>
+              <svg width="32" height="36" role="img" aria-hidden="true" focusable="false" aria-label="Логотип.">
+                <use xlink:href="../img/sprite.svg#logo"></use>
+              </svg>
+              <span class="logo__text--short logo__text">g</span>
+              <span class="logo__text--full logo__text">go</span>
+              <span class="visually-hidden">Логотип компании.</span>
+            </a>
+            <span class="footer__text">Интернет-магазин кофейных напитков</span>
           </div>
+          <ul class="footer__socials socials">
+            <li class="socials__item">
+              <a class="socials__link" href="#">
+                <svg width="20" height="20" role="img" aria-hidden="true" focusable="false" aria-label="Иконка вк.">
+                  <use xlink:href="../img/sprite.svg#vk"></use>
+                </svg>
+                <span class="visually-hidden">VK.</span>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link" href="#">
+                <svg width="22" height="22" role="img" aria-hidden="true" focusable="false" aria-label="Иконка пинтерест.">
+                  <use xlink:href="../img/sprite.svg#pinterest"></use>
+                </svg>
+                <span class="visually-hidden">Pinterest.</span>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link" href="#">
+                <svg width="20" height="20" role="img" aria-hidden="true" focusable="false" aria-label="Иконка одноклассники.">
+                  <use xlink:href="../img/sprite.svg#odnoklassniki"></use>
+                </svg>
+                <span class="visually-hidden">Одноклассники.</span>
+              </a>
+            </li>
+          </ul>
         </div>
         <section class="footer__info">
           <h2 class="visually-hidden">Навигация по сайту.</h2>
-          <div class="footer__navigation-wrapper">
-            <ul class="footer__list">
-              <li class="footer__item">
-                <h3 class="footer__title">Интернет-магазин</h3>
-              </li>
-              <li class="footer__item">
-                <a class="footer__link" href="#">Каталог</a>
-              </li>
-              <li class="footer__item">
-                <a class="footer__link" href="#">Доставка</a>
-              </li>
-              <li class="footer__item">
-                <a class="footer__link" href="#">Способы оплаты</a>
-              </li>
-              <li class="footer__item">
-                <a class="footer__link" href="#">О нас</a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer__navigation-wrapper">
-            <ul class="footer__list">
-              <li class="footer__item">
-                <h3 class="footer__title">Медиа</h3>
-              </li>
-              <li class="footer__item">
-                <a class="footer__link" href="#">Блог</a>
-              </li>
-              <li class="footer__item">
-                <a class="footer__link" href="#">Информация для СМИ</a>
-              </li>
-              <li class="footer__item">
-                <a class="footer__link" href="#">Правовая информация</a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer__navigation-wrapper">
-            <ul class="footer__list contacts">
-              <li class="footer__item">
-                <h3 class="footer__title contacts__title">Контакты</h3>
-              </li>
-              <li class="contacts__item">
-                <div class="contacts__wrapper">
-                  <svg class="contacts__img" width="13" height="16" role="img" aria-hidden="true" focusable="false" aria-label="Иконка адрес.">
-                    <use xlink:href="../img/sprite.svg#contacts"></use>
-                  </svg>
-                  <span class="contacts__address">Санкт-Петербург, набережная реки Карповки, дом 5</span>
-                </div>
-              </li>
-              <li class="contacts__item">
-                <a class="contacts__wrapper contacts__link" href="tel:+79999999999">
-                  <svg class="contacts__img" width="13" height="16" role="img" aria-hidden="true" focusable="false" aria-label="Иконка телефон.">
-                    <use xlink:href="../img/sprite.svg#phone"></use>
-                  </svg>
-                  <span class="contacts__phone">+7 (999) 999-99-99</span>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <h3 class="footer__title">Интернет-магазин</h3>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Каталог</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Доставка</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Способы оплаты</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">О нас</a>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <h3 class="footer__title">Медиа</h3>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Блог</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Информация для СМИ</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Правовая информация</a>
+            </li>
+          </ul>
+          <ul class="footer__list contacts">
+            <li class="footer__item">
+              <h3 class="footer__title contacts__title">Контакты</h3>
+            </li>
+            <li class="contacts__item">
+              <div class="contacts__wrapper">
+                <svg class="contacts__img" width="13" height="16" role="img" aria-hidden="true" focusable="false" aria-label="Иконка адрес.">
+                  <use xlink:href="../img/sprite.svg#contacts"></use>
+                </svg>
+                <span class="contacts__address">Санкт-Петербург, набережная реки Карповки, дом 5</span>
+              </div>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__wrapper contacts__link" href="tel:+79999999999">
+                <svg class="contacts__img" width="13" height="16" role="img" aria-hidden="true" focusable="false" aria-label="Иконка телефон.">
+                  <use xlink:href="../img/sprite.svg#phone"></use>
+                </svg>
+                <span class="contacts__phone">+7 (999) 999-99-99</span>
+              </a>
+            </li>
+          </ul>
         </section>
         <div class="footer__developer developer">
           <p class="developer__text">Разработано в</p>
